# sqlserver-healthcheck

./: README.md  main.py  pyproject.toml  template.docx
sqlserver_healthcheck/: main.py  parser.py  server_name.py
sqlserver_healthcheck/lib/: parser.py
sqlserver_healthcheck/rules/: base_rule.py  cpu.py  database_configuration.py  database_io.py  database_version.py  global_trace_flags.py  index_analysis.py  instance_configurations.py  instant_file.py  maintenance.py  memory.py  os_version.py  security.py  service_accounts.py  sql_agent.py  top_qureries.py  wait_types.py
test_files/: Navisite_SQL_Assesment__FULL_24-MWP-DBS1_01_28_2023.xlsx  Navisite_SQL_Assesment__FULL_AGDATA-SQL_09_12_2021.xlsx  Navisite_SQL_Assesment__FULL_FEDMMDB01_APTORA_06_08_2021.xlsx  Navisite_SQL_Assesment__FULL_GP-SQL-2020_09_12_2021.xlsx
