[tool.poetry]
name = "sqlserver-healthcheck"
version = "0.1.0"
description = ""
authors = ["Celso Crivelaro <celsocrivelaro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
docx = "^0.2.4"
docxtpl = "^0.16.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
